# QSVT_framework

./: .gitignore  .gitmodules  README.md
framework/build_approx_polyn/: CMakeLists.txt  approx_polyn
framework/build_circuit/: tobuild
framework/build_framework/: tobuild
framework/build_oracle/: tobuild
framework/include/: BaseTool.h  CLayer.h  CircuitLayers.h  QCircuit.h  QDYN.h  QGates.h  QLib.h  QMI.h  QSP.h  QSVT.h  circuittool.h  oracletool.h
framework/src/: ApprPolynFourier.cu  BaseTool.cpp  QCircuit.cpp  QDYN.cpp  QGates.cpp  QLib.cpp  QMI.cpp  QSP.cpp  QSVT.cpp  circuittool.cpp  launch_circuit.cpp  launch_framework.cpp  launch_oracle.cpp  oracletool.cpp
simulations/QSVT-angles-dynamic/: FAKE-angles_even_param2000_eps6.angles  FAKE-angles_odd_param2000_eps6.angles  angles_even_param1000000_eps6.angles  angles_even_param10000_eps6.angles  angles_even_param14000_eps6.angles  angles_even_param16000_eps6.angles  angles_even_param2000000_eps6.angles  angles_even_param2000_eps6.angles  angles_even_param3000000_eps6.angles  angles_even_param4000000_eps6.angles  angles_even_param8000_eps6.angles  angles_odd_param1000000_eps6.angles  angles_odd_param12000_eps6.angles  angles_odd_param14000_eps6.angles  angles_odd_param16000_eps6.angles  angles_odd_param17000_eps6.angles  angles_odd_param18000_eps6.angles  angles_odd_param2000000_eps6.angles  angles_odd_param2000_eps6.angles  angles_odd_param3000000_eps6.angles  angles_odd_param4000000_eps6.angles  angles_odd_param6000_eps6.angles  angles_odd_param8000_eps6.angles
simulations/XW_waves/: XW-COMPARISON-SMALL.ipynb  fluid_waves_1d.py  xw_1d.py
simulations/pylib/: ControlPlot.py  Geom.py  Global_variables.py  arbitrary_data.py  circuit_lib.py  curve.py  draw_circuit.py  measurement.py  mix.py  oracletool.py  plib.py  py_framework.py  ymath.py
simulations/qsvt-test-polynomials/: for-matrix-inversion.ipynb
simulations/tests/: analysis-amplitude-estimation.ipynb  create_init_vector.ipynb  draw_circuit.ipynb  qsvt_matrices.ipynb  single_value_nonhermitian.ipynb  (+10 more)
(+200 files in other folders)
